--- a/packages/app/src/theme/global.css
+++ b/packages/app/src/theme/global.css
@@ -6,15 +6,6 @@
       "slnt" 0;
 }
 
-.texture {
-  background-image: url("../assets/bg-texture.svg");
-  background-position: bottom;
-  background-size: contain;
-  background-repeat: no-repeat;
-  height: 0;
-  padding: 0 0 calc(100%) 0;
-}
-
 .transition-all-05 { transition: all 0.5s ease; }
 
 .main-gradient {
@@ -35,4 +26,12 @@
 
 .divider {
   background: linear-gradient(132.19deg, #FFC010 0%, #EBA312 48%, #D38015 71%, #B24F18 99%);
+}
+
+.bg-pan-tl {
+  background: linear-gradient(to bottom right, #FFC010, #B24F18);
+  background-size: 200%;
+  -webkit-background-clip: text;
+  background-clip: text;
+  animation: bg-pan-tl 3s alternate infinite;
 }
