feat: a lot of redesign and better UI

--- a/packages/app/src/theme/global.css
+++ b/packages/app/src/theme/global.css
@@ -29,7 +29,7 @@
 }
 
 .bg-pan-tl {
-  background: linear-gradient(to bottom right, #ef5766, #5031a9);
+  background: linear-gradient(to bottom right, #FFC010, #B24F18);
   background-size: 200%;
   -webkit-background-clip: text;
   background-clip: text;
